cmake_minimum_required(VERSION 3.23)
project(adventofcode2022)

set(CMAKE_CXX_STANDARD 20)

add_executable(day16 16/main.cpp)
add_executable(day17 17/main.cpp)
add_executable(day18 18/main.cpp)
add_executable(day19 19/main.cpp)
add_executable(day20 20/main.cpp)
add_executable(day21 21/main.cpp)
add_executable(day22 22/main.cpp)
add_executable(day23 23/main.cpp)
add_executable(day24 24/main.cpp)
add_executable(day25 25/main.cpp)